--- a/src/WMateri.html
+++ b/src/WMateri.html
@@ -4,17 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>WeLearn</title>
-    <link rel="stylesheet" type="text/css" href="css/style-wmat.css">
+    <link rel="stylesheet" type="text/css" href="css/style-wemateri.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
 <body>
-    <div class="scroll">
     <section id="banner">
         <header>
             <div class="container">
-                <img src="img/welearnnn.png">
+                <img src="img/wave-wemater.jpeg">
             <ul>
                 <li><a href="#SMP">SMP / MTS</a></li>
                 <li><a href="#SMA">SMA / SMK</a></li>
@@ -29,7 +28,7 @@
                     <div class="ini-box-materi">
                         <div class="box-materi">
                             <div class="text-banner">
-                                <h1>WeMateri</h1><br>
+                                <h2>WeMateri</h2><br>
                                 <h3><strong>Pilih Materi Belajarmu dan <br>Tingkatkan Produktivitas Bersama WeLearn !</strong></h3>
                             </div>
                         </div>
