--- a/src/materi-pembelajaran-mtk.html
+++ b/src/materi-pembelajaran-mtk.html
@@ -32,9 +32,9 @@
                   <ul>
                         <li class="text-decoration"><a href="beranda-materi-mtk.html"><i class="fas fa-desktop"></i><span>Beranda Materi</span></a></li>
                         <li class="active-2 text-decoration"><a href="materi-pembelajaran-mtk.html"><i class="fas fa-book"></i><span>Materi</span></a></li>
-                        <li class="text-decoration"><a href="video-materi.html"><i class="fas fa-video"></i><span>Video Materi</span></a></li>
-                        <li class="text-decoration"><a href="#"><i class="fas fa-file-word"></i><span>Rangkuman Materi</span></a></li>
-                        <li class="text-decoration"><a href="quiz1.html"><i class="fas fa-comment-dots"></i><span>Quiz Cepat</span></a></li>
+                        <li class="text-decoration"><a href="video-materi-mtk.html"><i class="fas fa-video"></i><span>Video Materi</span></a></li>
+                        <li class="text-decoration"><a href="rangkuman-materi-mtk.html"><i class="fas fa-file-word"></i><span>Rangkuman Materi</span></a></li>
+                        <li class="text-decoration"><a href="quiz1-mtk.html"><i class="fas fa-comment-dots"></i><span>Quiz Cepat</span></a></li>
                   </ul>
     </div>
 
