--- a/src/materi-sma.html
+++ b/src/materi-sma.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>WeLearn</title>
-    <link rel="stylesheet" type="text/css" href="css/style-wmat.css">
+    <link rel="stylesheet" type="text/css" href="css/style-wemateri.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
@@ -13,7 +13,7 @@
       <section id="banner">
             <header>
                   <div class="container">
-                        <img src="img/welearnnn.png">
+                        <img src="img/wave-wemater.jpeg">
             </div>
             </header>
       </section>
