--- a/src/signup.html
+++ b/src/signup.html
@@ -5,6 +5,8 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" type="text/css" href="css/style-signup.css">
+      <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
       <title>Sign Up</title>
 </head>
 <body>
@@ -33,10 +35,11 @@
                         </div>
                   </form>
 
-                  <div class="button-login">
-                        <button type="submit" class="submit"><a href="login.html">SIGN UP</a></button>
+                  <div class="button-sign-up">
+                        <button type="submit" id="submit3"><a href="login.html">SIGN UP</a></button>
                   </div>
             </div>
       </div>
+      <script src="sign-up.js"></script>
 </body>
 </html>
