--- a/src/jadwal-ujian.html
+++ b/src/jadwal-ujian.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <title>JADWAL UJIAN</title>
     <link rel="stylesheet" type="text/css" href="css/style-mapel.css">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   </head>
 
 <body>
