--- a/src/wexam1.html
+++ b/src/wexam1.html
@@ -1,18 +1,16 @@
-<!-- Created By CodingNepal - www.codingnepalweb.com  -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TRYOUT</title>
-    <link rel="stylesheet" href="wexam1.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <link rel="stylesheet" href="style-wexam1.css">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
-    <!-- start Quiz button -->
     <div class="start_btn"><button>Mulai TryOut</button></div>
 
-    <!-- Info Box -->
     <div class="info_box">
         <div class="info-title"><span>Some Rules of this TryOut</span></div>
         <div class="info-list">
@@ -28,7 +26,6 @@
         </div>
     </div>
 
-    <!-- Quiz Box -->
     <div class="quiz_box">
         <header>
             <div class="title">WE-TRYOUT</div>
@@ -39,30 +36,23 @@
         </header>
         <section>
             <div class="que_text">
-                <!-- Here I've inserted question from JavaScript -->
             </div>
             <div class="option_list">
-                <!-- Here I've inserted options from JavaScript -->
             </div>
         </section>
 
-        <!-- footer of Quiz Box -->
         <footer>
             <div class="total_que">
-                <!-- Here I've inserted Question Count Number from JavaScript -->
             </div>
             <button class="next_btn">Next Que</button>
         </footer>
     </div>
 
-    <!-- Result Box -->
     <div class="result_box">
         <div class="icon">
             <i class="fas fa-crown"></i>
         </div>
         <div class="complete_text">You've completed the TryOut!</div>
-        <div class="score_text">
-            <!-- Here I've inserted Score Result from JavaScript -->
         </div>
         <div class="buttons">
             <button class="restart">Replay</button>
@@ -71,9 +61,8 @@
     </div>
 
    
- <!-- Inside this JavaScript file I've inserted Questions and Options only -->
+
  <script src="js/questions1.js"></script>
-    <!-- Inside this JavaScript file I've coded all Quiz Codes -->
     <script src="js/script-questions.js"></script>
 
 </body>
